# 64korppu

./: .gitignore  CLAUDE.md  README.md
docs/: mikrokontrollerit.md  pcb-workflow.md  piirikaavio-c-userport-pico.md  piirikaavio-e-iec-nano-sram.md  vaihtoehto-a-iec-mcu.md  vaihtoehto-c-userport-mcu.md
docs/A-IEC-Pico/: README.md  d64-tuki.md  piirikaavio.md
docs/B-Expansion-FDC/: README.md  kuvaus.md  piirikaavio.md
docs/C-Userport-Pico/: README.md
docs/D-IEC-Nano/: README.md  kuvaus.md  piirikaavio.md
docs/E-IEC-Nano-SRAM/: README.md  diagnostiikkapadit.md  kokoonpano.md  kuvaus.md  lz4-protokolla.md  mfm-dekoodaus.md  piirikaavio.md
docs/plans/: 2026-03-08-dual-format-design.md  2026-03-08-kicad-pcb-design.md  2026-03-08-kicad-pcb-implementation.md  2026-03-09-fastload-protocols-design.md  2026-03-09-fastload-protocols-implementation.md  (+2 more)
firmware/: CMakeLists.txt  README.md
firmware/A-IEC-Pico/: CMakeLists.txt
firmware/A-IEC-Pico/include/: cbm_dos.h  disk_format.h  mfm_codec.h
firmware/A-IEC-Pico/src/: fat12.c  main.c  mfm_codec.c
hardware/: README.md
test/: .gitignore  Makefile  gen_test_d64.py  mock_fat12.c  mock_fat12.h  test_cbmfs.c  test_d64.c  test_format.c  test_mfm_bruteforce.c  test_mfm_decode_raw.c  test_nano_fastload.c  test_nano_fat12.c  test_nano_lz4.c  test_nano_shiftreg.c
tools/: add-testpoints-2layer.py  add-testpoints.py  convert-4layer.py  flash-and-capture.sh  generate_schematics.py  pcb-drc-check.py  pcb-pipeline.sh  pcb-validate.py  render-3d.py  resize-2layer.py  rigol-scope.py  scope-capture.sh  serial-logger.py
(+104 files in other folders)
